# talk_2025_01_variant

./: CMakeLists.txt  README.md  slides.md
include/: extended_json.hpp  json.hpp  overload.hpp  util.hpp
rendered_slides/: index.html
src/: json.cpp  main.cpp
